<resources>
    <string name="app_name">OpenVK Flux</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Загрузка...</string>
    <string name="error">Ошибка</string>
    <string name="closed">Закрыто</string>
    <string name="apply">Применить</string>
    <string name="success">Успешно</string>
    <string name="cancel">Отмена</string>
    <string name="ok">ОК</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="reply">Ответить</string>
    <string name="edit_post_title">Редактирование поста</string>
    <string name="edit_post_hint">Что нового?</string>
    <string name="profile_edit_success">Изменения сохранены</string>
    <string name="pin">Закрепить</string>
    <string name="unpin">Открепить</string>
    <string name="pinned">закреплено</string>
    <string name="close">Закрыть</string>
    <string name="back">Назад</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск...</string>
    <string name="refresh">Обновить</string>
    <string name="share">Поделиться</string>
    <string name="copy">Копировать</string>
    <string name="link_copied">Ссылка скопирована</string>
    <string name="chat_favorites">Избранное</string>
    <string name="chat_favorites_subtitle">Чат с самим собой</string>
    <string name="chat_typing">печатает...</string>
    <string name="toolbar_subsfeed">Мои новости</string>
    <string name="toolbar_globalfeed">Все новости</string>
    <string name="open_drawer">Открыть меню</string>
    <string name="close_drawer">Закрыть меню</string>
    <string name="nav_news">Новости</string>
    <string name="nav_messages">Сообщения</string>
    <string name="nav_friends">Друзья</string>
    <string name="nav_groups">Группы</string>
    <string name="nav_photos">Фотографии</string>
    <string name="nav_videos">Видео</string>
    <string name="nav_music">Музыка</string>
    <string name="nav_notes">Заметки</string>
    <string name="note_delete_not_supported">Удаление заметок не поддерживается</string>
    <string name="note_delete_confirm">Удалить заметку?</string>
    <string name="note_delete_success">Заметка удалена</string>
    <string name="note_create_title">Новая заметка</string>
    <string name="note_title_hint">Заголовок</string>
    <string name="note_text_hint">Текст заметки</string>
    <string name="note_btn_create">Создать</string>
    <string name="note_fill_fields_error">Заполните все поля</string>
    <string name="note_created_success">Заметка создана</string>
    <string name="note_viewer_title">Заметка</string>
    <string name="note_edit_title">Редактировать заметку</string>
    <string name="note_updated_success">Заметка обновлена</string>
    <string name="nav_notifications">Уведомления</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_profile">Профиль</string>
    <string name="login_title">Вход</string>
    <string name="login_welcome">Добро пожаловать!</string>
    <string name="instance_hint">Инстанс (например, api.openvk.org)</string>
    <string name="instance_helper">Укажите адрес инстанса OpenVK</string>
    <string name="instance_address_hint">Введите адрес инстанса</string>
    <string name="login_adress">Адрес: </string>
    <string name="instance_display_names_custom">Ввести вручную</string>
    <string name="login_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login_with_token">Войти по токену</string>
    <string name="token_hint">Токен доступа (access_token)</string>
    <string name="login_token_invalid">Введите токен</string>
    <string name="btn_login">Войти</string>
    <string name="btn_login_confirm">Всё равно войти</string>
    <string name="btn_login_loading">Вход...</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="login_error1">Неверная почта или пароль</string>
    <string name="login_error2">Требуется двухфакторная аутентификация</string>
    <string name="login_error3">Ошибка клиента</string>
    <string name="login_error4">Ошибка аутентификации </string>
    <string name="register">Зарегистрироваться</string>
    <string name="login_success">Вы успешно вошли в аккаунт!</string>
    <string name="login_enter_email">Введите почту</string>
    <string name="login_enter_password">Введите пароль</string>
    <string name="select_instance">Выберите инстанс</string>
    <string name="instance_address">Адрес: </string>
    <string name="app_openvk">OpenVK</string>
    <string name="fa_length6">Введите 6-значный код</string>
    <string name="fa_error_numbers">Код должен содержать только цифры</string>
    <string name="fa_error1">Ошибка проверки кода</string>
    <string name="fa_error2">Неверный код</string>
    <string name="fa_error3">Ошибка авторизации</string>
    <string name="fa_error4">Неверные данные для входа</string>
    <string name="fa_invalid_request">Неверный формат запроса</string>
    <string name="fa_code_expired">Код истек, запросите новый</string>
    <string name="fa_success">Код подтвержден</string>
    <string name="two_factor_title">Двухфакторная аутентификация</string>
    <string name="two_factor_subtitle">Подтверждение входа</string>
    <string name="two_factor_description">Введите код из приложения-аутентификатора</string>
    <string name="two_factor_code_hint">Код подтверждения</string>
    <string name="btn_verify">Подтвердить</string>
    <string name="btn_verify_loading">Проверка...</string>
    <string name="resend_code">Отправить код повторно</string>
    <string name="use_backup_code">Использовать резервный код</string>
    <string name="two_factor_verified">Код подтвержден</string>
    <string name="instance_settings">Настройки инстанса</string>
    <string name="current_instance_loading">Загрузка...</string>
    <string name="current_instance_format">Текущий инстанс: %s</string>
    <string name="current_instance_hint">Новый инстанс</string>
    <string name="instance_change_helper">Изменение инстанса потребует повторного входа</string>
    <string name="save_instance">Сохранить инстанс</string>
    <string name="instance_saved">Инстанс сохранен</string>
    <string name="instance_changed_logout">Инстанс изменен. Необходимо войти заново</string>
    <string name="about_instance">Об инстанции</string>
    <string name="instance_id">ID: %d</string>
    <string name="instance_version">Версия: %s</string>
    <string name="instance_users">Пользователи</string>
    <string name="instance_online">Онлайн</string>
    <string name="instance_active">Активные</string>
    <string name="instance_groups">Сообществ</string>
    <string name="instance_info">ИНФОРМАЦИЯ</string>
    <string name="instance_rules">Правила инстанции</string>
    <string name="instance_policy">Политика конфиденциальности</string>
    <string name="instance_admins">АДМИНИСТРАТОРЫ</string>
    <string name="instance_links">ССЫЛКИ</string>
    <string name="post_author">Автор поста</string>
    <string name="post_content">Текст поста</string>
    <string name="post_original_author">Автор оригинального поста</string>
    <string name="post_original_content">Текст оригинального поста</string>
    <string name="post_time_ago">%s назад</string>
    <string name="time_just_now">Только что</string>
    <string name="time_minutes_ago">%1$d мин назад</string>
    <string name="time_today_at">сегодня в %1$s</string>
    <string name="time_yesterday_at">вчера в %1$s</string>
    <string name="time_full_format">%1$s в %2$s</string>
    <string name="time_full_format_year">%1$s %2$d в %3$s</string>
    <string name="post_likes">Лайки</string>
    <string name="post_comments">Комментарии</string>
    <string name="post_shares">Поделиться</string>
    <string name="post_share">Поделиться постом</string>
    <string name="copy_link">Скопировать ссылку</string>
    <string name="copied_link">Ссылка скопирована</string>
    <string name="post_share_from">Поделиться постом от %s</string>
    <string name="repost_dialog_title">Поделиться постом</string>
    <string name="repost_share_to_wall">На стену</string>
    <string name="repost_share_to_group">В группу</string>
    <string name="repost_share_to_dm">В личные сообщения</string>
    <string name="repost_comment_hint">Добавить комментарий...</string>
    <string name="repost_attach">Прикрепить</string>
    <string name="repost_send">Отправить</string>
    <string name="repost_success">Репост опубликован</string>
    <string name="repost_error">Ошибка репоста</string>
    <string name="feature_not_available">Пока недоступно</string>
    <string name="post_like_error">Невозможно поставить лайк этому посту</string>
    <string name="post_edit_not_supported">Редактирование поста пока не реализовано</string>
    <string name="post_delete_not_supported">Удаление поста пока не реализовано</string>
    <string name="post_pin_not_supported">Закрепление поста пока не реализовано</string>
    <string name="post_delete_confirm">Удалить пост?</string>
    <string name="post_error_like">Невозможно поставить лайк этому посту</string>
    <string name="post_delete_message">Это действие нельзя отменить</string>
    <string name="post_published">Пост опубликован!</string>
    <string name="post_publish_error">"Ошибка публикации:\u0020"</string>
    <string name="post_publishing">Публикация...</string>
    <string name="post_create_title">Создать пост</string>
    <string name="create_post_whats_new">Что у вас нового?</string>
    <string name="create_post_photo">Фото</string>
    <string name="create_post_publish">Опубликовать</string>
    <string name="create_post_group">От имени сообщества</string>
    <string name="create_post_author_loading">Загрузка...</string>
    <string name="comments_title">Комментарии</string>
    <string name="comments_write">Написать комментарий</string>
    <string name="comments_loading_error">Ошибка загрузки комментариев:\u0020</string>
    <string name="comments_send_error">Ошибка отправки комментария:\u0020</string>
    <string name="comments_add_error">Введите комментарий</string>
    <string name="comments_cannot_load">Невозможно загрузить комментарии</string>
    <string name="comments_updated">Комментарии обновлены</string>
    <string name="comments_added">Комментарий отправлен</string>
    <string name="comments_empty">Комментариев пока нет</string>
    <string name="comments_edited">Комментарий изменен</string>
    <string name="comments_deleted">Комментарий удален</string>
    <string name="comments_delete_confirm">Удалить комментарий?</string>
    <string name="comments_delete_message">Вы действительно хотите удалить этот комментарий? Это действие нельзя будет отменить.</string>
    <string name="comments_edit_hint">Редактировать комментарий...</string>
    <string name="comments_reply_to">Ответ пользователю %s</string>
    <string name="comments_image_selected">Изображение выбрано</string>
    <string name="comments_post_not_found">Ошибка: пост не найден</string>
    <string name="photo_comments_title">Комментарии к фото</string>
    <string name="appearance_color_scheme">Цветовая схема</string>
    <string name="appearance_color_blue">Синяя</string>
    <string name="appearance_color_material_you">Material You (динамическая)</string>
    <string name="appearance_color_custom">Свой цвет</string>
    <string name="appearance_select_custom_color">Выберите цвет или введите HEX-код:</string>
    <string name="custom_color_hex_label">Код цвета (HEX)</string>
    <string name="appearance_material_you_info">Material You доступен только на Android 12+</string>
    <string name="create_post_sign_group">Подпись автора</string>
    <string name="create_post_nsfw">Содержит NSFW-контент</string>
</resources>